--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@convex-dev/auth": "0.0.81",
     "@hookform/resolvers": "^3.9.0",
+    "sonner": "^1.5.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-button": "^1.1.0",
     "@radix-ui/react-card": "^1.1.0",
